--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   color: #fff !important;
   background-color: #004aa8 !important;
@@ -26,11 +31,6 @@ body {
 .logo {
   width: 55px;
   height: 55px;
-}
-
-.introduction,
-.function {
-  margin-top: 70px;
 }
 
 .kicker {
@@ -62,10 +62,13 @@ body {
 }
 
 .cta-btn {
-  width: 50%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
+}
+
+.cta-btn a {
+  margin: 0 0.35rem;
 }
 
 .home-icon {
@@ -111,7 +114,7 @@ body {
 }
 
 .section-text {
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 300;
   line-height: 2rem;
   letter-spacing: 1px;
@@ -133,37 +136,50 @@ body {
   width: 8rem;
 }
 
+.introduction,
+.function {
+  margin-top: 3rem;
+}
+
+.project-vessel {
+  width: 100%;
+  height: 480px;
+  box-shadow: 0 25px 50px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
+.img-vessel {
+  width: 120%;
+  position: relative;
+  top: 0rem;
+  left: -6rem;
+  border-top: 20px solid rgb(73, 97, 220);
+  border-bottom: 20px solid rgb(73, 97, 220);
+  border-radius: 8px;
+}
+
 .proj-img {
-  width: 25rem;
-  height: 25rem;
-  text-decoration: none;
-  border-radius: 15px;
+  width: 100%;
+  height: 280px;
+  margin-top: 1rem;
   box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
     0 10px 10px -5px rgba(0, 0, 0, 0.04);
 }
 
 .proj-tech-logo {
-  width: 100%;
-  height: 50px;
-  margin: auto;
-  margin-top: 1rem;
-  padding: 0 2rem;
-  font-size: 2rem;
-  background-color: green;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  height: 30px;
   border-radius: 5px;
+  text-align: end;
 }
 
-.proj-tech-logo i {
-  padding: 1rem;
+.proj-tech-logo img {
+  width: 35px;
 }
 
 .proj-btns {
   font-size: 1rem;
   font-weight: 200;
-  margin: 10px 10px;
+  margin: 10px 10px 10px 0;
   padding: 8px 18px;
   color: #fff;
   background: linear-gradient(
@@ -212,7 +228,6 @@ img {
   .about-logos,
   .section-title,
   .section-sub-title,
-  .section-text,
   .email-btn {
     text-align: center;
   }
@@ -221,6 +236,7 @@ img {
   }
   .cta-btn {
     margin: auto;
+    justify-content: center;
   }
   .hr-tag {
     margin: auto;
@@ -235,5 +251,16 @@ img {
     left: 0rem;
     text-decoration: none;
     border-radius: 15px;
+  }
+  .project-vessel {
+    height: 100%;
+  }
+  .img-vessel {
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  .proj-img {
+    height: 230px;
   }
 }
