--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@ body {
   background-color: #004aa8 !important;
   font-family: "SF UI Text", "Helvetica Neue", "Segoe UI", "Oxygen", "Ubuntu",
     "Cantarell", "Open Sans", sans-serif;
+    -webkit-animation: fadein 3s ease-in ;
+    -moz-animation: fadein 3s ease-in ;
+    animation: fadein 3s ease-in ;
 }
 
 #top-menu {
@@ -26,6 +29,9 @@ body {
 
 .container {
   max-width: 1068px !important;
+  -webkit-animation: anim 1s ease-in ;
+  -moz-animation: anim 1s ease-in ;
+  animation: anim 1s ease-in ;
 }
 
 .logo {
@@ -295,4 +301,35 @@ img {
   .proj-img {
     height: 230px;
   }
+}
+
+
+@-webkit-keyframes fadein {
+  from { opacity: 0;}
+  to { opacity: 1; }
+}
+
+@-moz-keyframes fadein {
+  from { opacity: 0;}
+  to { opacity: 1;}
+}
+
+@keyframes fadein {
+  from { opacity: 0;}
+  to { opacity: 1;}
+}
+
+@-webkit-keyframes anim {
+  from {transform: translateY(-5%);}
+  to {transform: translateY(0); }
+}
+
+@-moz-keyframes anim {
+  from {transform: translateY(-5%);}
+  to { transform: translateY(0); }
+}
+
+@keyframes anim {
+  from { transform: translateY(-5%);}
+  to { transform: translateY(0); }
 }
